--- a/app/views/user_mailer/weekly_report.html.erb
+++ b/app/views/user_mailer/weekly_report.html.erb
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="container">
-        <h3>Report</h3>
+        <h3>Weekly Report</h3>
         <h3>Date: <%= Date.today%></h3>
         <p>Number of Tickets closed after 72 Hours of creation</p>
         <% last_week_start = Date.today.beginning_of_week - 7.days %>
