--- a/app/views/user_mailer/daily_report.html.erb
+++ b/app/views/user_mailer/daily_report.html.erb
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div class="container">
-        <h3>Report</h3>
+        <h3>Daily Report</h3>
         <h3 class="date">Date: <%= Date.today.strftime('%d/%m/%Y') %></h3>
         <p>Number of Tickets open for more than 72 Hours</p>
         <p>Pallabita Ghosh - <%= @tickets["PALLABITA GHOSH"] %></p>
