--- a/app/views/tickets/email.html
+++ b/app/views/tickets/email.html
@@ -1,38 +1,117 @@
-Gyanprakash Pandey   gyanprakash@thejaingroup.com
-Bidesh Sill    bidesh@thejaingroup.com
-Bidisha Banerjee   bidisha@thejaingroup.com
-Shristi Chakraborty    legal5@thejaingroup.com
-Yash Sodhani    yash@thejaingroup.com
-Santanu Goswami   dgm.project@thejaingroup.com
-Aniruddha Ray    engineer3@thejaingroup.com
-Shanoli Mondal    sales.exotica1@thejaingroup.com
-Subrata Das    sales.dreamecocity2@thejaingroup.com
-SUPARNO GHOSH    sales.dreamone1@thejaingroup.com
-Anirban Banerjee    sales.dwc3@thejaingroup.com
-Ankur Patwari    sm.sales4@thejaingroup.com
-Anuradha Pramanik    sales.dreamone3@thejaingroup.com
-Dhiraj Singh    sm.sales2@thejaingroup.com
-Dipayan Sengupta    channel.sales@thejaingroup.com
-Megha Baraily    sales.dreamvalley2@thejaingroup.com
-Nakhyastra Ghosh    sm.sales@thejaingroup.com
-Nirupam Roy    sales.dreamgurukul6@thejaingroup.com
-Prasenjit Sarkar    sales.dreamvalley1@thejaingroup.com
-Rittik Ghosh    sales.dreamecocity1@thejaingroup.com
-Subhajit Patra    sales.dreampalazzo@thejaingroup.com
-Sumit Sing    sales.dreamgurukul4@thejaingroup.com
-Surajit Pal    sales.dreamgurukul1@thejaingroup.com
-Sudipta Poddar    sales.dreamgurukul2@thejaingroup.com
-Somraj Dutta    sm.sales3@thejaingroup.com
-Arnab Dutta    sales.dwc2@thejaingroup.com
-Rajat Dutta    sales.dreamgurukul3@thejaingroup.com
-Abhijit Sarkar    sales.dreamgurukul5@thejaingroup.com
-Rony    dwc@thejaingroup.com
-Sanjib Paul    system2.thejaingroup@gmail.com
-Saikat Manna    system3.thejaingroup@gmail.com
-Aniket Biswas   system4@thejaingroup.com
-Ayush Ruia   system.admin@thejaingroup.com
-Dipak Pramanik   system1@thejaingroup.com
-Suvankar Dam   legal1@thejaingroup.com
-Poulomi Saha   poulomi@thejaingroup.com
-Shantanu Naskar   projectmanager1@thejaingroup.com
-Sk Janmahammad   janmahammad@thejaingroup.com
+Abhijit Sarkar - sales.dreamgurukul5@thejaingroup.com
+Accounts Jain Group - accounts@thejaingroup.com
+Amlan Banerjee - fm2@thejaingroup.com
+Aniket Biswas - system4@thejaingroup.com
+Anirban Banerjee - sales.dwc3@thejaingroup.com
+Aniruddha Ray - engineer3@thejaingroup.com
+Ankan Ghoshdostidar - engineer1@thejaingroup.com
+Ankur Patwari - sm.sales4@thejaingroup.com
+Anubhav Sarkhel - Audit3@thejaingroup.com
+Anuradha Pramanik - sales.dreamone3@thejaingroup.com
+Arnab Dutta - sales.dwc2@thejaingroup.com
+Arun Pandey - accounts2@thejaingroup.com
+Ashutosh Tiwari - ashutosh@thejaingroup.com
+Ayush Ruia - system.admin@thejaingroup.com
+Bachchu Samanta - accounts1@thejaingroup.com
+Banking Banking - banking@thejaingroup.com
+Bidesh Sill - accounts4@thejaingroup.com
+Biswanath Jana - store2@thejaingroup.com
+CEO Jain Group - ceo@thejaingroup.com
+Chanchal Saha - gm.marketing@thejaingroup.com
+Chandan Audit - audit1@thejaingroup.com
+Company Loan - loan@thejaingroup.com
+Debashis Brahma - pr@thejaingroup.com
+Dhiraj Singh - sm.sales2@thejaingroup.com
+Dinu Gupta - store1@thejaingroup.com
+Dipak Pramanik - system1@thejaingroup.com
+Dipayan Sengupta - channel.sales@thejaingroup.com
+Dream Gurukul - gurukul@thejaingroup.com
+DWC Project - dwc@thejaingroup.com
+Gyan Prakash Pandey - sm.accounts@thejaingroup.com
+GyanPrakash Sah - cfo@thejaingroup.com
+Jaikishan Poddar - purchase.hotel@thejaingroup.com
+Jain Group (contact) - contact@thejaingroup.com
+Jain Group (administrator) - administrator@thejaingroup.com
+Jain Group (cpcare) - cpcare@thejaingroup.com
+Jain YouTube - youtube@thejaingroup.com
+Jayanta Ray - sm.projects2@thejaingroup.com
+Jayprakash Gupta - cashier@thejaingroup.com
+Kenneth Scott - kenneth@thejaingroup.com
+Legal 2 - legal2@thejaingroup.com
+Madhurima Chowdhury - hrd@thejaingroup.com
+Manarshi Kumar Roy - legal3@thejaingroup.com
+Manash Choudhury - digitalmarketing@thejaingroup.com
+Marketing Marketing - marketing@thejaingroup.com
+Megha Baraily - sales.dreamvalley2@thejaingroup.com
+Mitrabarun Ghosh - sm.projects1@thejaingroup.com
+Moumita Mitra - jaingroupcaller6@thejaingroup.com
+Mukesh kr. Laheri - mgr.it@thejaingroup.com
+Munna Kamath - sitesupervisor2@thejaingroup.com
+Nakhyastra Ghosh - sm.sales@thejaingroup.com
+Nilanjan Chattopadhyay - projectbilling@thejaingroup.com
+Nirupam Roy - sales.dreamgurukul6@thejaingroup.com
+Olivia De - auditcaller2@thejaingroup.com
+Pallabita Ghosh - customercare1@thejaingroup.com
+Poulami Nandi - jaingroupcaller4@thejaingroup.com
+Poulomi Saha - architect@thejaingroup.com
+Pramila Jain - pramila@thejaingroup.com
+Prasenjit Sarkar - sales.dreamvalley1@thejaingroup.com
+Prem Lal Jain - premjain@thejaingroup.com
+R J - rj@thejaingroup.com
+Rabindra Nath Dey - purchase@thejaingroup.com
+Raj Kumar Kasera - mgr.accounts@thejaingroup.com
+Rajanya Mitra - career@thejaingroup.com
+Rajat Dutta - sales.dreamgurukul3@thejaingroup.com
+Rajendri Hazra - frontoffice@thejaingroup.com
+Rima Mandal - jaingroupcaller10@thejaingroup.com
+Rimi Kundu - customercare3@thejaingroup.com
+Rishi Jain - rishi@thejaingroup.com
+Rittik Ghosh - sales.dreamecocity1@thejaingroup.com
+Rituparna Dey - oe2@thejaingroup.com
+Sandeep Agarwal - sandeepagarwal@thejaingroup.com
+Sandeep Sharma - audit@thejaingroup.com
+Sanjib Das - projectmanager2@thejaingroup.com
+Sanjib Kumar Ghosh - sm.legal@thejaingroup.com
+Santanu Goswami - dgm.project@thejaingroup.com
+Santosh Kumar - admin.facility@thejaingroup.com
+Sarnali Halder - customercare2@thejaingroup.com
+SEO Jain Group - seo@thejaingroup.com
+Shanoli Mondal - sales.exotica1@thejaingroup.com
+Shantanu Naskar - projectmanager1@thejaingroup.com
+Shradhya Saha - jaingroupcaller9@thejaingroup.com
+Shrayans Shrayans - shrayans@thejaingroup.com
+Shristi Chakraborty - legal5@thejaingroup.com
+Shuchandra Das - assistant.md@thejaingroup.com
+Sk Janmahammad - sitesupervisor1@thejaingroup.com
+Sneha Sarkar - jaingroupcaller2@thejaingroup.com
+Sohan Banka - itsupport@thejaingroup.com
+Somraj Dutta - sm.sales3@thejaingroup.com
+Soumyadeep Guhaneogi - audit2@thejaingroup.com
+Sreelekha Goswami - PR1@thejaingroup.com
+Sridip Chattopadhyay - finance@thejaingroup.com
+Subhajit Patra - sales.dreampalazzo@thejaingroup.com
+Subhoday Sarkar - fm1@thejaingroup.com
+Subrata Das - sales.dreamecocity2@thejaingroup.com
+Sudipta Debnath - jaingroupcaller3@thejaingroup.com
+Sudipta Poddar - sales.dreamgurukul2@thejaingroup.com
+Sumit Sing - sales.dreamgurukul4@thejaingroup.com
+Suparno Ghosh - sales.dreamone1@thejaingroup.com
+Super Receptionist - receptionist@thejaingroup.com
+Surabhi Jain - surabhi@thejaingroup.com
+Surajit Pal - sales.dreamgurukul1@thejaingroup.com
+Surojit Pramanick - legal@thejaingroup.com
+Susanta Ghosh - gm.commercial@thejaingroup.com
+Suvankar Dam - legal1@thejaingroup.com
+Suvrajyoti Dey - FM@thejaingroup.com
+Syamal Sarkar - sitesupervisor3@thejaingroup.com
+Tahseen Nuur - jaingroupcaller1@thejaingroup.com
+Tapan Kanti Chakraborty - store.ho@thejaingroup.com
+Tapan Samanta - mis@thejaingroup.com
+Uma Chatterjee - assistant.vc@thejaingroup.com
+V C - vc@thejaingroup.com
+Varsha Banerjeer - jaingroupcaller7@thejaingroup.com
+We Care - wecare@thejaingroup.com
+Where Doc - wheredoc@thejaingroup.com
+Yash Sodhani - yash@thejaingroup.com
+Zainab Hakimuddin - hr@thejaingroup.com
+Socialmedia Socialmedia - socialmedia@thejaingroup.com
