--- a/app/views/user_mailer/assignee_reminder.html.erb
+++ b/app/views/user_mailer/assignee_reminder.html.erb
@@ -13,7 +13,7 @@
             <p style="font-weight: bold;">Subject: <%= @subjects[index]%></p>
             <p>Assigned On: <%= DateTime.parse(@assigned_date[index]).new_offset("+05:30").strftime("%B %d, %Y %I:%M %p") %></p>
             <p>If the issue has been resolved but not yet marked as such, please use the button below to update the status.</p>
-            <a href="https://c609-49-37-8-255.ngrok-free.app/tickets/issue?ticketId=<%= id %>&agent_id=<%= @agent_id %>&assignee_name=<%= @assignee_name %>" style="display: inline-block; padding: 8px 15px 9px 15px; background-color: #34a238; color: white; text-decoration: none; border-radius: 5px;">Issue Solved</a>
+            <a href="https://bc20-49-37-8-255.ngrok-free.app/tickets/issue?ticketId=<%= id %>&agent_id=<%= @agent_id %>&assignee_name=<%= @assignee_name %>" style="display: inline-block; padding: 8px 15px 9px 15px; background-color: #34a238; color: white; text-decoration: none; border-radius: 5px;">Issue Solved</a>
         </div>
         <% end %>
     </div>
